# Three-Body-Problem

./: .flake8  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.hypothesis/constants/: 00b672c7e1e6a568  01cb728e0ed91eb1  0570a7c52cd987f9  0736e2d4acddd01a  0aff081405263263  0cfa12dfbf9e9abb  0d65a410db824952  153d3bbc77f2a1fb  15f998fddd6c37c7  1811342e60592437  1cce0c53a0aa1633  2b97384431257107  2d25023202421037  2d7ca5a0f7d31ecb  2f49888d399714a6  2fda912527187aee  2fe3544ee67bd01f  375e996620efe363  3e82ec3f36e42836  44971ea411745967  491b9127715c5b2b  495022fa95338713  49dbff769e7e1ccb  4a4a8a85179b27a7  4a93642af9421fee  59863c1b98ecdd47  5c45ff96dcfb81c0  5dd98a164720f0a9  65f154da2c2631aa  6795acd58e4ca5e5  67b0a8ccf18bf5d2  6bbac69d213e2ae7  6e6fc1e1c3b7f97a  70c2241423f14e15  725ac9e842270c84  740d5b34a29cc934  (+49 more)
benchmarks/: benchmark_accelerations.py
tests/: test_body.py  test_constants.py  test_energy.py  test_energy_monitor.py  test_forces.py  test_gpu_fallback.py  test_gravitational_constant.py  test_integrators_extended.py  test_jit.py  test_longterm.py  test_momentum_property.py  test_nasa_download.py  test_physics.py  test_simulation.py  test_theme_path.py  test_trail_and_collision.py  test_trail_length.py  test_ui_manager_import.py  test_utils.py
threebody/: __init__.py  analysis.py  camera.py  constants.py  integrators.py  jit.py  nasa.py  physics.py  physics_utils.py  presets.py  rendering.py  simulation.py  simulation_full.py  state_io.py  state_manager.py  theme.json  ui_manager.py  utils.py
