[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "threebody"
version = "2.0.17"
description = "Pygame based demonstration of an N-body gravitational system."
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "matplotlib",
    "numba",
    "pygame-ce>=2.5.4",
    "pygame_gui",
    "jplephem",
    "hypothesis",
]

[project.scripts]
threebody-sim = "threebody.simulation_full:main"
threebody-download = "threebody.nasa:main"
